--- a/ProcessadorMIPS.qsf
+++ b/ProcessadorMIPS.qsf
@@ -63,4 +63,11 @@ set_global_assignment -name VHDL_FILE MIPS/registradorGenerico.vhd
 set_global_assignment -name VHDL_FILE MIPS/bancoRegistradoresArqRegReg.vhd
 set_global_assignment -name VHDL_FILE MIPS/ULA.vhd
 set_global_assignment -name VHDL_FILE MIPS/UnidadeControle.vhd
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform1.vwf
+set_global_assignment -name VHDL_FILE muxGenerico2x1.vhd
+set_global_assignment -name VHDL_FILE somador.vhd
+set_global_assignment -name VHDL_FILE RAMMIPS.vhd
+set_global_assignment -name VHDL_FILE UC_ULA.vhd
+set_global_assignment -name VHDL_FILE estendeSinalGenerico.vhd
+set_global_assignment -name VHDL_FILE concatena.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
