--- a/ProcessadorMIPS.qsf
+++ b/ProcessadorMIPS.qsf
@@ -71,3 +71,4 @@ set_global_assignment -name VHDL_FILE UC_ULA.vhd
 set_global_assignment -name VHDL_FILE estendeSinalGenerico.vhd
 set_global_assignment -name VHDL_FILE concatena.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform2.vwf
