--- a/ProcessadorMIPS.qsf
+++ b/ProcessadorMIPS.qsf
@@ -70,5 +70,7 @@ set_global_assignment -name VHDL_FILE RAMMIPS.vhd
 set_global_assignment -name VHDL_FILE UC_ULA.vhd
 set_global_assignment -name VHDL_FILE estendeSinalGenerico.vhd
 set_global_assignment -name VHDL_FILE concatena.vhd
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform2.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform3.vwf
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform4.vwf
